src/css/flyout-menu.css
@tailwind components;
@tailwind utilities;

#navbar {
  .menu-bg {
    width: 0px;
    height: 0px;
    margin: 30px 0 20px 20px;
    background: radial-gradient(circle, #dc8d05, #9b3649);
    border-radius: 50%;
    position: fixed;
    top: 15px;
    right: 10px;

    transition: all 1.5s ease;

    &.in-view {
      z-index: -1;
      width: 520px;
      min-height: 550px;
      transform: translate(60%, -30%);
      transition: all 0.5s ease;
    }

    &.out-view {
      z-index: -1;
      display: none;
      width: 0px;
      min-height: 0px;
    }
  }

  #hamburgerIcon {
    div {
      transition: all 0.75s;
    }
  }

  .change {
    #br1 {
      transform: translateY(11px) rotateZ(-45deg);

      & img.knife {
        filter: invert(100%);
      }
    }
    #br2 {
      opacity: 0;
    }
    #br3 {
      transform: translateY(-15px) rotateZ(45deg);
    }
  }

  nav {
    display: none;
  }
  
  .show-flyout-navbar {
    display: flex;
    flex-direction: row-reverse;
  }

  #flyout-menu-logo {
    opacity: 0;
    width: 0px;
    padding-bottom: 40px;
    transform: translate(0%, 0%);
    transition: all 1s ease;
    &.in-view-logo {
      opacity: 1;
      width: 3rem;
      transform: translate(-150px, -30px);
    }
    &.out-view-logo {
      transform: translate(10%, 10%);
    }
  }
  #flyout-menu-items {
    li {
      opacity: 0;
      font-size: 20px;
      color: white;
      transform: translate(0%, 0%);
      transition: all 0.75s ease;
    }

    li::after {
      content: var(--slice-pizza);
      position: absolute;
      top: 0;
      left: 55px;
      margin-bottom: 20px;
      width: 0;
      opacity: 0;
      transition: all 1s ease-in-out;
    }

    li:nth-child(4)::after {
      left: 75px;
    }

    li:nth-child(5)::after {
      content: none;
    }

    :hover::after,
    :focus::after,
    .active::after {
      width: 2rem;
      opacity: 1;
    }

    &.in-view-menuItems {
         li {
        opacity: 1;
      }
      li:nth-child(1) {
        transform: translate(-65px, 70px);
      }
      li:nth-child(2) {
        transform: translate(-57px, 80px);
      }

      li:nth-child(3) {
        transform: translate(-38px, 90px);
      }
      li:nth-child(4) {
        transform: translate(-13px, 100px);
      }
      li:nth-child(5) {
        transform: translate(25px, 120px);
      }
    }
    &.out-view-menuItems {
      li {
        
        transform: translate(0%, 0%);
      }
    }
  }
}

